force-app/main/default/objects/Configuration__c/Configuration__c.object-meta.xml
<CustomObject>
    <description>Utilizado para armazenar configurações e/ou dados de baixa volumetria e poucos campos. Com intuito de reduzir a criação de objetos com poucos campos e registros, gerando economia nos limites de objetos customizados da ORG</description>
    <label>Configuração</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Código da Configuração</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configurações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>