force-app/main/default/objects/Configuration__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Identifica se o registro está ativo ou inativo para novas pré-vendas</description>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>