force-app/main/default/objects/Configuration__c/fields/RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeName__c</fullName>
    <description>Nome do tipo de registro</description>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do Tipo de Registro</label>
    <type>Text</type>
</CustomField>