force-app/main/default/objects/Configuration__c/recordTypes/RuralFiberEligibility.recordType-meta.xml
<RecordType>
    <fullName>RuralFiberEligibility</fullName>
    <active>true</active>
    <description>Tipo de registro utilizado para as configurações de Elegibilidade para a frente de Fibra Rural</description>
    <label>Elegibilidade Fibra Rural</label>
</RecordType>