force-app/main/default/objects/Configuration__c/validationRules/VerificationFormatCityFibraRural.validationRule-meta.xml
<ValidationRule>
    <fullName>VerificationFormatCityFibraRural</fullName>
    <active>true</active>
    <description>Verifica o formato do nome da elegibilidade (campo Cidade)</description>
    <errorConditionFormula>OR
(
CONTAINS (LOWER(City__c), &quot;ä&quot;),
CONTAINS (LOWER(City__c), &quot;á&quot;),
CONTAINS (LOWER(City__c), &quot;â&quot;),
CONTAINS (LOWER(City__c), &quot;à&quot;),
CONTAINS (LOWER(City__c), &quot;ã&quot;),
CONTAINS (LOWER(City__c), &quot;é&quot;),
CONTAINS (LOWER(City__c), &quot;è&quot;),
CONTAINS (LOWER(City__c), &quot;ê&quot;),
CONTAINS (LOWER(City__c), &quot;ë&quot;),
CONTAINS (LOWER(City__c), &quot;í&quot;),
CONTAINS (LOWER(City__c), &quot;î&quot;),
CONTAINS (LOWER(City__c), &quot;ï&quot;),
CONTAINS (LOWER(City__c), &quot;ì&quot;),
CONTAINS (LOWER(City__c), &quot;ö&quot;),
CONTAINS (LOWER(City__c), &quot;ó&quot;),
CONTAINS (LOWER(City__c), &quot;ò&quot;),
CONTAINS (LOWER(City__c), &quot;õ&quot;),
CONTAINS (LOWER(City__c), &quot;ô&quot;),
CONTAINS (LOWER(City__c), &quot;ü&quot;),
CONTAINS (LOWER(City__c), &quot;ú&quot;),
CONTAINS (LOWER(City__c), &quot;ù&quot;),
CONTAINS (LOWER(City__c), &quot;û&quot;),
CONTAINS (LOWER(City__c), &quot;ç&quot;)
)</errorConditionFormula>
    <errorDisplayField>City__c</errorDisplayField>
    <errorMessage>Informe o nome da cidade sem caracteres especiais ou acentos, por exemplo: SAO PAULO!</errorMessage>
</ValidationRule>