force-app/main/default/objects/Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>UF__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Configuration__c.RuralFiberEligibility</value>
    </filters>
    <label>Todas as Elegibilidades Fibra Rural</label>
    <sharedTo>
        <role>FibraRural</role>
    </sharedTo>
</ListView>